examples/rejected/fixpoint_rounding_wrong.urdr
# FALSE (rounding divergence, D9 s2): every inexact op rounds toward -inf (floor), never toward
# zero (trunc). div(from_int(-1), from_int(3)) = floor(-2^32/3) = -1431655766, NOT the trunc value
# -1431655765. div is inlined so this fixture needs no vendored module. This fixture claims the trunc
# value; correct floor div refuses the equality (=? breach). floor is the law; a trunc defect diverges first.
pw63 := [4611686018427387904, 2305843009213693952, 1152921504606846976, 576460752303423488, 288230376151711744, 144115188075855872, 72057594037927936, 36028797018963968, 18014398509481984, 9007199254740992, 4503599627370496, 2251799813685248, 1125899906842624, 562949953421312, 281474976710656, 140737488355328, 70368744177664, 35184372088832, 17592186044416, 8796093022208, 4398046511104, 2199023255552, 1099511627776, 549755813888, 274877906944, 137438953472, 68719476736, 34359738368, 17179869184, 8589934592, 4294967296, 2147483648, 1073741824, 536870912, 268435456, 134217728, 67108864, 33554432, 16777216, 8388608, 4194304, 2097152, 1048576, 524288, 262144, 131072, 65536, 32768, 16384, 8192, 4096, 2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1]
zeros32 := [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
bits_of := \fn a |-> nth(\fo(pw63, [a, []], \fn st p |-> ?(p <= nth(st, 0), [nth(st, 0) - p, push(nth(st, 1), 1)], [nth(st, 0), push(nth(st, 1), 0)])), 1)
divmod := \fn magb bits |-> \fo(bits, [0, 0, magb], \fn st bit |-> (\fn q |-> (\fn r |-> (\fn mb |-> ?(q < 4611686018427387904, (\fn bmr |-> ?(bmr <= r, [q + q + 1, r - bmr, mb], [q + q, r + r + bit, mb]))(mb - r - bit), =?(0, 1)))(nth(st, 2)))(nth(st, 1)))(nth(st, 0)))
divf := \fn a b |-> ?(a < -9223372036854775807, =?(0, 1), ?(b < -9223372036854775807, =?(0, 1), ?(b = 0, =?(0, 1), (\fn sa |-> (\fn sb |-> (\fn ma |-> (\fn mb |-> (\fn dm |-> (\fn q |-> (\fn r |-> ?(sa = sb, q, ?(r = 0, 0 - q, 0 - q - 1)))(nth(dm, 1)))(nth(dm, 0)))(divmod(mb, cat(bits_of(ma), zeros32))))(?(b < 0, 0 - b, b)))(?(a < 0, 0 - a, a)))(?(b < 0, -1, 1)))(?(a < 0, -1, 1)))))
from_int := \fn k |-> ?(k < -2147483647, =?(0, 1), ?(k > 2147483647, =?(0, 1), k * 4294967296))
=?(divf(from_int(-1), from_int(3)), -1431655765)
